--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
         "@vue/compiler-sfc": "^3.0.3",
         "axios": "^0.19",
         "cross-env": "^7.0",
-        "laravel-mix": "^6.0.0-beta.14",
+        "eslint": "^7.16.0",
+        "eslint-plugin-vue": "^7.3.0",
+        "laravel-mix": "^6.0.3",
         "lodash": "^4.17.19",
         "postcss": "^8.1.10",
         "resolve-url-loader": "^3.1.0",
         "vue-loader": "^16.0.0"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.6.3",
-        "@inertiajs/inertia-vue": "^0.4.2",
-        "@inertiajs/inertia-vue3": "^0.2.2",
-        "@inertiajs/progress": "^0.2.3",
+        "@inertiajs/inertia": "^0.8.0",
+        "@inertiajs/inertia-vue": "^0.5.0",
+        "@inertiajs/inertia-vue3": "^0.3.0",
+        "@inertiajs/progress": "^0.2.4",
+        "luxon": "^1.25.0",
         "remixicon": "^2.5.0",
         "vue": "^3.0.3",
-        "vue-toastification": "^2.0.0-beta.8"
+        "vue-toastification": "^2.0.0-beta.8",
+        "vue3-datepicker": "^0.1.3",
+        "vue3-datepicker-lite": "^1.8.0"
     }
 }
